refactored welcome.erb, added more conditions to get_winner

--- a/views/welcome.erb
+++ b/views/welcome.erb
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <link rel="stylesheet" href"/style.css">
+    <link rel="stylesheet" href="style.css">
     <meta charset="utf-8">
     <title>Roshambo</title>
   </head>
   <body>
     <h1>Rock, Paper, Scissors!</h1>
-    <p> The rules are simple: bla bla bla bla rules etc </p>
+    <p> The rules are simple: choose one of the options below and the computer
+      will choose another. <br> Rock beats Scissors, Scissors beat Paper, Paper
+      beats Rock. Two of the same result ends in a tie. <br>Go.</p>
     <nav>
       <ul>
-        <li><a href="/rock/scissors">play</a></li>
+        <li><a href="/random/rock">Rock</a></li>
+        <li><a href="/random/paper">Paper</a></li>
+        <li><a href="/random/scissors">Scissors</a></li>
         </ul>
       </nav>
   </body>
