added basic CSS styling

--- a/views/result.erb
+++ b/views/result.erb
@@ -1,3 +1,12 @@
-<h1>The result is... <%= @result %></h1>
-
-<a href="/welcome">Play Again</a></li>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <link rel="stylesheet" href="../style.css">
+    <meta charset="utf-8">
+    <title>The result is...</title>
+  </head>
+  <body>
+    <h1>The result is... <%= @result %></h1>
+    <h3><a href="/welcome">Play Again</a></h3>
+  </body>
+</html>
