--- a/views/welcome.erb
+++ b/views/welcome.erb
@@ -7,14 +7,14 @@
   </head>
   <body>
     <h1>Rock, Paper, Scissors!</h1>
-    <p> The rules are simple: choose one of the options below and the computer
+    <h2> The rules are simple: choose one of the options below and the computer
       will choose another. <br> Rock beats Scissors, Scissors beat Paper, Paper
-      beats Rock. Two of the same result ends in a tie. <br>Go.</p>
+      beats Rock. Two of the same result ends in a tie. <br>Go.</h2>
     <nav>
       <ul>
-        <li><a href="/random/rock">Rock</a></li>
-        <li><a href="/random/paper">Paper</a></li>
-        <li><a href="/random/scissors">Scissors</a></li>
+        <li><h3><a href="/random/rock">Rock</a></h3></li>
+        <li><h3><a href="/random/paper">Paper</a></h3></li>
+        <li><h3><a href="/random/scissors">Scissors</a></h3></li>
         </ul>
       </nav>
   </body>
