--- a/public/style.css
+++ b/public/style.css
@@ -1,11 +1,15 @@
 body {
-  background-color: navy;
+  background-color: rebeccapurple;
 }
 
 h1 {
   color: white;
 }
 
-p {
-  color: white
+h2 {
+  color: white;
+}
+
+h3 {
+  color: white;
 }
